# python-package-sample

./: README.md  pyproject.toml
mypackage/: __main__.py  core.py
tests/: test_core.py
