[tool.poetry]
name = "mypackage"
version = "0.1.0"
description = "my package template"
authors = ["mrikari <61904007+mrikari@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0, <3.11"
fire = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pysen = "^0.10.3"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
autopep8 = "^2.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10.3"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py310"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

